# emberharmony

./: .env.example  .gitignore  .npmrc  AGENTS.md  APPLE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIVEKIT_JOURNAL.md  NEXT-STEPS.md  NEXT_ACTIONS.md  README.ar.md  README.br.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.zh.md  README.zht.md  SECURITY.md  bunfig.toml  dep-audit.csv  desktop-stack.md  flake.nix  install  package.json  rust-toolchain.toml  sst.config.ts  summon.py  turbo.json  (+1 more)
crates/liquid-audio/: Cargo.toml  README.md  build.rs
crates/liquid-audio-oracle/: Cargo.toml
crates/liquid-audio-oracle/examples/: bench_load_infer.rs  chat_multiturn.rs  duplex_chat.rs  generate.rs  mic_chat.rs  moshi_realtime_trace.rs  realtime_probe.rs  self_chat.rs  text_chat.rs
crates/liquid-audio-oracle/src/: audio_out.rs  chat_template.rs  detokenizer.rs  ffi.rs  handles.rs  lib.rs  loader.rs  processor.rs  realtime.rs  resample.rs
crates/liquid-audio-oracle/src/compute/: threads.rs  weights.rs
crates/liquid-audio-oracle/src/model/: lfm2_audio.rs  lfm2_hf.rs  linear.rs  mod.rs  native_conformer.rs  transformer.rs
crates/liquid-audio-oracle/tests/: cache_equivalence.rs  e2e_generate.rs  e2e_voice_runtime.rs  mimi_native_parity.rs  native_conformer_parity.rs  native_frontend_parity.rs  native_safetensors_oracle.rs  native_tokenizer.rs  short_conv_parity.rs  speculative_prefill.rs
crates/liquid-audio/docs/: ARCHAEOLOGY.md  ARCH_1_MIMI_CODEC.md  AUDIO_DETOKENIZER_PORT.md  DECODE_ENGINE.md  ENGINE_DESIGN.md  FLASHKERN.md  MIMI_PORT.md  PORT_STATUS.md  PYTHON_VS_RUST.md  RUST_DELETION_PLAN.md  THREADING_PARITY.md
crates/liquid-audio/examples/: bench_load_infer.rs  bench_native_load.rs  chat_multiturn.rs  duplex_chat.rs  generate.rs  mic_chat.rs  realtime_probe.rs  self_chat.rs  text_chat.rs
crates/liquid-audio/native/: CMakeLists.txt  README.md
crates/liquid-audio/native/bench/: README.md  amx_bf16_hybrid.cpp  amx_neon_seam.md  amx_vs_neon.c  batch_barrier_probe.c  bfdot_vs_widen.c  cache_fifo_probe.c  down_projection_chain.cpp  down_projection_chain_aarch64.S  monarch_fft_probe.c  monarch_fft_team.c  monarch_fused_coop.c  pipeline_probe.c  register_cache_chain.cpp  register_cache_chain_aarch64.S
crates/liquid-audio/native/include/: README.md  flashkern_conv.h  flashkern_depth.h  flashkern_fft.h  flashkern_gemm.h  flashkern_math.h  flashkern_prng.h  flashkern_rope.h  flashkern_sampler.h  lfm_asm_visibility.h  lfm_audio_dock.h  lfm_audio_pass.h  lfm_capture_format.h  lfm_capture_policy.h  lfm_conformer.h  lfm_detokenizer.h  lfm_frontend.h  lfm_kernel_bridge.h  lfm_mimi.h  lfm_model.h  lfm_model_plan.h  lfm_platform_audio.h  lfm_runtime.h  lfm_safetensors.h  lfm_sesame_detector.h  lfm_session.h  lfm_tokenizer.h  lfm_types.h  lfm_visibility.h
crates/liquid-audio/native/tests/: native_host_mailbox.cpp  native_inner_voice_probe.cpp  native_speech_to_speech.cpp  native_weight_segment.cpp
crates/liquid-audio/native/tools/: Makefile  native_speech_gate_main.cpp  weight_segment_host.cpp
crates/liquid-audio/scripts/: gate.sh  test-rosetta.sh
crates/liquid-audio/src/: control.rs  detokenizer.rs  ffi.rs  handles.rs  lib.rs  loader.rs  mimi_native.rs  native_voice.rs  processor.rs  utils.rs  voice_api.rs
crates/liquid-audio/src/candle_ext/: loss.rs
crates/liquid-audio/src/compute/: bf16_gemm.rs  threads.rs  weights.rs
crates/liquid-audio/src/data/: arrow_io.rs  mapper.rs  mod.rs
crates/liquid-audio/src/model/: lfm2_audio.rs  lfm2_hf.rs  linear.rs  mod.rs  native_conformer.rs  transformer.rs
crates/liquid-audio/src/moshi/: mod.rs
crates/liquid-audio/src/runtime/: audio_out.rs  realtime.rs  resample.rs  voice_runtime.rs
crates/liquid-audio/tests/: cache_equivalence.rs  capture_format.rs  e2e_generate.rs  e2e_self_talk_32k.rs  e2e_voice_runtime.rs  engine_hard_supervision.rs  engine_idle_zero_spin.rs  engine_stackless_lifecycle.rs  mimi_conv_carry.rs  mimi_native_parity.rs  native_audio_encode_pass.rs  native_conformer_parity.rs  native_context_rollover.rs  native_frontend_parity.rs  native_inner_voice_probe.rs  native_mixed_turn.rs  native_pcm_spans.rs  native_product_abi.rs  native_safetensors.rs  native_speech_to_speech.rs  native_tokenizer.rs  native_voice_session.rs  sesame_detector.rs  short_conv_parity.rs  speculative_prefill.rs
experiments/lfm2-audio-voice/: .gitignore  Cargo.toml  README.md  glm_subagent.py  lfm_runtime.py  requirements.txt  setup.sh  voice_loop.py
experiments/lfm2-audio-voice/ARCH/: CROSSREF.md  README.md  detokenizer.md  processor.md  trainer.md  utils.md
experiments/lfm2-audio-voice/ARCH/data/: README.md  dataloader.md  mapper.md  preprocess.md  types.md
experiments/lfm2-audio-voice/ARCH/demo/: README.md  chat.md  model.md
experiments/lfm2-audio-voice/ARCH/model/: README.md  lfm2_audio.md  lfm2_backbone.md  mlp.md  transformer.md
experiments/lfm2-audio-voice/ARCH/moshi/: README.md  client.md  client_gradio.md  client_utils.md  run_inference.md  run_tts.md  server.md
experiments/lfm2-audio-voice/candle-flashfftconv/: ARCHITECTURE.md  Cargo.toml
experiments/lfm2-audio-voice/candle-flashfftconv/examples/: bench_conv_update.rs
experiments/lfm2-audio-voice/candle-flashfftconv/src/: butterfly.rs  conv1d.rs  conv1d_update.rs  dd_complex_mul.rs  dw3.rs  fused_fft_conv.rs  fused_fft_conv_dd.rs  fused_monarch.rs  irfft.rs  lib.rs  metal_util.rs
experiments/lfm2-audio-voice/glm-version/: AS_BUILT_claude_changes.md  README.md  detokenizer.md  frontend.md  processor.md  tauri-voice.md  threading.md  trainer.md  utils.md  voice_runtime.md
experiments/lfm2-audio-voice/glm-version/data/: README.md  dataloader.md  mapper.md  preprocess.md  (+1 more)
experiments/lfm2-audio-voice/liquid-audio-rs/: .gitignore  ARCHAEOLOGY.md  ARCH_1_MIMI_CODEC.md  Cargo.toml  PARITY.md  PORT_STATUS.md  PYTHON_VS_RUST.md  THREADING_PARITY.md
experiments/lfm2-audio-voice/src/: audio.rs  glm.rs  lfm.rs  main.rs
(+441 files in other folders)
