[package]
name = "liquid-audio-oracle"
version = "0.1.0"
edition = "2021"
publish = false
description = "Workspace-only Candle oracle, training, and fixture-capture surface for liquid-audio"

[lib]
name = "liquid_audio_oracle"
path = "src/lib.rs"

[dependencies]
liquid-audio = { path = "../liquid-audio", default-features = false, features = ["oracle-abi"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20"
moshi = "0.6"
symphonia = { version = "0.5", features = ["all"] }
arrow-array = "53"
arrow-schema = "53"
arrow-ipc = "53"
rayon = "1"
num_cpus = "1"
libc = "0.2"
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }

[features]
default = []
download = ["dep:hf-hub", "liquid-audio/download"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "moshi/metal"]
flash-attn = []
