# Native Flashkern runtime for LFM2-Audio.
[package]
name = "liquid-audio"
version = "0.1.0"
edition = "2021"
description = "Native Flashkern runtime for LFM2-Audio"
build = "build.rs"
autoexamples = false

[build-dependencies]
cc = "1"

[lib]
name = "liquid_audio"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }
crossbeam-channel = "0.5"
kcoro-sys = { path = "../kcoro-sys" }
cpal = { version = "0.15", optional = true }

[dev-dependencies]
serde_json = "1"
libc = "0.2"
sha2 = "0.10"

[[example]]
name = "bench_native_load"
path = "examples/bench_native_load.rs"

[features]
default = ["download"]
download = ["dep:hf-hub"]
audio-io = ["dep:cpal"]
# Builds hidden native conformance entry points for the workspace-only Oracle.
# This never enables Rust numerical code or framework dependencies.
oracle-abi = []
