# Desktop control data and checkpoint download support.
[package]
name = "liquid-audio"
version = "0.1.0"
edition = "2021"
description = "Desktop control data and LFM2-Audio checkpoint download support"
autoexamples = false

[lib]
name = "liquid_audio"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }

[features]
default = ["download"]
download = ["dep:hf-hub"]
