# Faithful Rust port of Liquid AI's `liquid_audio` (LFM2.5-Audio).
# Module-for-module with the Python package under src/liquid_audio/.
# Empty [workspace] makes this its own workspace root (it lives nested under the
# lfm-voice crate).
[workspace]

[package]
name = "liquid-audio"
version = "0.1.0"
edition = "2021"
description = "Faithful Rust port of liquid_audio (LFM2.5-Audio) on candle + the moshi crate"

[lib]
name = "liquid_audio"
path = "src/lib.rs"

[dependencies]
# Tensor substrate (matches the moshi crate's candle 0.9.x).
candle-core = "0.9"
candle-nn = "0.9"
# STFT (mel featurizer) and ISTFT (detokenizer vocoder).
rustfft = "6"
# config.json (model hyperparameters) deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# text tokenizer (HF AutoTokenizer equivalent — loads tokenizer.json).
tokenizers = "0.20"
# multinomial sampling (torch.multinomial equivalent) for temperature/top-k.
# Seedable StdRng → reproducible generation. Version matches candle's tree.
rand = "0.8"
# HF snapshot download (huggingface_hub.snapshot_download equivalent) for
# get_model_dir's repo-id branch. Sync (ureq) backend = faithful to the
# synchronous Python call. Optional (feature `download`, on by default).
hf-hub = { version = "0.3", optional = true }
# Mimi neural audio codec for the v1 audio-out path (`processor.mimi`). Kyutai's
# own `moshi` crate — the Rust port of the exact code the Python lib vendors as
# `liquid_audio/moshi` — so it loads the moshi-format Mimi checkpoint
# (`encoder.model.N…`, split `rvq_first`/`rvq_rest`) natively. candle-transformers'
# mimi uses a different (Encodec-style `encoder.layers.N`/weight-norm) layout and
# can't load this checkpoint. moshi 0.6.4 pins candle ^0.9.1 → shares my candle
# 0.9.2 (no version split). Pure candle, no torch. (candle-transformers' full-
# precision `lfm2` is absent in 0.9, so that backbone stays ported in-tree.)
moshi = "0.6"

[dev-dependencies]
anyhow = "1"

[features]
default = ["download"]
# hf-hub snapshot download in get_model_dir (huggingface_hub.snapshot_download).
download = ["dep:hf-hub"]
# Mirrors the Python `module_exists("flash_attn")` optional path.
flash-attn = []
