# Faithful Rust port of Liquid AI's `liquid_audio` (LFM2.5-Audio).
# Module-for-module with the Python package under src/liquid_audio/.
# Empty [workspace] makes this its own workspace root (it lives nested under the
# lfm-voice crate).
[workspace]

[package]
name = "liquid-audio"
version = "0.1.0"
edition = "2021"
description = "Faithful Rust port of liquid_audio (LFM2.5-Audio) on candle + the moshi crate"

[lib]
name = "liquid_audio"
path = "src/lib.rs"

[dependencies]
# Tensor substrate (matches the moshi crate's candle 0.9.x).
candle-core = "0.9"
candle-nn = "0.9"
# `generation::LogitsProcessor` (argmax / temperature / top-k / top-p / multinomial)
# — the same sampler `moshi` uses for depformer decoding. Reused for next-token
# sampling instead of a private softmax+multinomial. Already in-tree via moshi (0.9),
# so no new candle version. (Its `lfm2` is quantized-only even at 0.10, so the
# full-precision backbone stays ported in-tree — see the moshi note below.)
candle-transformers = "0.9"
# config.json (model hyperparameters) deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# text tokenizer (HF AutoTokenizer equivalent — loads tokenizer.json).
tokenizers = "0.20"
# HF snapshot download (huggingface_hub.snapshot_download equivalent) for
# get_model_dir's repo-id branch. Sync (ureq) backend = faithful to the
# synchronous Python call. Optional (feature `download`, on by default).
# 0.4 (vs 0.3.2) handles HF's current Xet storage redirects; 0.3.2 fails them
# with "RelativeUrlWithoutBase". rustls TLS to avoid a system OpenSSL dep.
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }
# Mimi neural audio codec for the v1 audio-out path (`processor.mimi`). Kyutai's
# own `moshi` crate. candle-transformers ships the *same* Mimi algorithm, but the
# two differ in the RVQ weight-path names: moshi reads `quantizer.rvq_first.*` /
# `quantizer.rvq_rest.*`, while candle-transformers reads
# `…semantic_residual_vector_quantizer.*` / `…acoustic_…`. This model's codec
# checkpoint (`tokenizer-…-checkpoint125.safetensors`) is verified to use the
# `quantizer.rvq_first`/`rvq_rest` naming (0 HF-format keys), so `moshi::mimi`
# loads it natively — using the upstream crate, not a vendored fork. (Vendoring
# candle-transformers' Mimi would re-port ~2.6k lines 0.10→0.9 + add a weight-name
# remap, for the identical algorithm — a fork, the opposite of "use upstream".)
# moshi 0.6.4 pins candle ^0.9.1 → shares my candle 0.9.2 (no version split). Pure
# candle, no torch. (candle-transformers' `lfm2` is quantized-only at every version,
# so the full-precision backbone stays ported in-tree.)
moshi = "0.6"
# `soundfile.read` equivalent for `data/mapper::_load_audio_bytes`: decode an
# encoded-audio byte stream (WAV/FLAC/OGG-Vorbis/AIFF/… — the containers libsndfile
# reads, and more) to f32 samples. Pure Rust, no C deps, no torch.
symphonia = { version = "0.5", features = ["all"] }
# Apache Arrow (pure Rust, no C deps) — `data/preprocess` writes the dataset in
# HuggingFace `datasets.save_to_disk` format (Arrow IPC stream + dataset_info.json
# + state.json), which `data/dataloader::load_from_disk` reads back. The trimmed
# IPC-only set (array/schema/ipc) ≈ 13s cold build, vs Python's pyarrow C++ blob.
arrow-array = "53"
arrow-schema = "53"
arrow-ipc = "53"

[dev-dependencies]
anyhow = "1"
# Native mic capture + speaker playback for the live `mic_chat` example.
cpal = "0.15"

[features]
default = ["download"]
# hf-hub snapshot download in get_model_dir (huggingface_hub.snapshot_download).
download = ["dep:hf-hub"]
# Mirrors the Python `module_exists("flash_attn")` optional path.
flash-attn = []
# Metal (Apple GPU) acceleration — bf16, the deployed dtype — for real-time
# generation. Enables candle + moshi Metal kernels. `LFM_DEVICE=metal` at runtime.
metal = ["candle-core/metal", "candle-nn/metal", "moshi/metal"]
