# Standalone (own [workspace] so a parent workspace doesn't absorb it): parses every
# Rust .rs file with `syn` and emits JSON of every fn signature (name, container type,
# args with types, return type). The exact-AST counterpart of Python's `ast` for the
# signature audit — no regex.
[package]
name = "rust_sig_dump"
version = "0.0.0"
edition = "2021"

[workspace]

[[bin]]
name = "rust_sig_dump"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1"
walkdir = "2"
serde_json = "1"
